<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="filter">Filter</string>
    <string name="filter_product">Filter 1</string>
    <string name="setContentDescription_FAB">FAB</string>
    <string name="setContentDescriptionImageView">imageView</string>

    <string name="name_product">Celana Jeans Pria Model Classic Import Luar Negri</string>
    <string name="price">Rp. 150.000</string>
    <string name="address">Jakarta</string>
    <string name="rating">rating</string>

    <string name="store">Tokopedia</string>
    <string name="location">location :</string>
    <string name="price_min_max">Price :</string>
    <string name="lainya">lainnya</string>
    <string name="jakarta">jakarta</string>
    <string name="apply">apply</string>

    <string-array name="rangeSlider">
        <item>17.000</item>
        <item>5.699.000</item>
    </string-array>
</resources>